ensure unclickable rooms maintain their z-index onHover

--- a/src/components/templates/PartyMap/components/Map/MapRoom.scss
+++ b/src/components/templates/PartyMap/components/Map/MapRoom.scss
@@ -44,6 +44,8 @@ $label-visible: flex;
     z-index: z(map-room--unclickable);
 
     &:hover {
+      z-index: z(map-room--unclickable);
+
       transform: none;
 
       .maproom__image {
